# hue-play-monitor-sync

./: .gitignore  LICENSE  README.md  app_entry.py  build.sh  desktop_lights.spec  pyproject.toml
src/: color_processing.py  config_manager.py  credentials.py  hue_bridge.py  main.py  screen_capture.py  sync_engine.py  zone_mapper.py
tests/: test_capture.py  test_color_processing.py  test_gradient.py
ui/: tray_app.py
